tests/ui/type/pattern_types/nested.stderr
error: `(u32) is 1..=` is not a valid base type for range patterns
  --> $DIR/nested.rs:10:34
   |
LL | const BAD_NESTING: pattern_type!(pattern_type!(u32 is 1..) is 0..) = todo!();
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: range patterns only support integers
  --> $DIR/nested.rs:10:63
   |
LL | const BAD_NESTING: pattern_type!(pattern_type!(u32 is 1..) is 0..) = todo!();
   |                                                               ^^^

error: `(i32) is 1..=` is not a valid base type for range patterns
  --> $DIR/nested.rs:15:35
   |
LL | const BAD_NESTING2: pattern_type!(pattern_type!(i32 is 1..) is ..=-1) = todo!();
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: range patterns only support integers
  --> $DIR/nested.rs:15:64
   |
LL | const BAD_NESTING2: pattern_type!(pattern_type!(i32 is 1..) is ..=-1) = todo!();
   |                                                                ^^^^^

error: `(i32) is 1..=` is not a valid base type for range patterns
  --> $DIR/nested.rs:19:35
   |
LL | const BAD_NESTING3: pattern_type!(pattern_type!(i32 is 1..) is ..0) = todo!();
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: range patterns only support integers
  --> $DIR/nested.rs:19:64
   |
LL | const BAD_NESTING3: pattern_type!(pattern_type!(i32 is 1..) is ..0) = todo!();
   |                                                                ^^^

error: `()` is not a valid base type for range patterns
  --> $DIR/nested.rs:23:35
   |
LL | const BAD_NESTING4: pattern_type!(() is ..0) = todo!();
   |                                   ^^
   |
note: range patterns only support integers
  --> $DIR/nested.rs:23:41
   |
LL | const BAD_NESTING4: pattern_type!(() is ..0) = todo!();
   |                                         ^^^

error: `f32` is not a valid base type for range patterns
  --> $DIR/nested.rs:27:35
   |
LL | const BAD_NESTING5: pattern_type!(f32 is 1.0 .. 2.0) = todo!();
   |                                   ^^^
   |
note: range patterns only support integers
  --> $DIR/nested.rs:27:42
   |
LL | const BAD_NESTING5: pattern_type!(f32 is 1.0 .. 2.0) = todo!();
   |                                          ^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/nested.rs:10:63
   |
LL | const BAD_NESTING: pattern_type!(pattern_type!(u32 is 1..) is 0..) = todo!();
   |                                                               ^ expected `(u32) is 1..=`, found integer
   |
   = note: expected pattern type `(u32) is 1..=`
                      found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/nested.rs:15:67
   |
LL | const BAD_NESTING2: pattern_type!(pattern_type!(i32 is 1..) is ..=-1) = todo!();
   |                                                                   ^^ expected `(i32) is 1..=`, found integer
   |
   = note: expected pattern type `(i32) is 1..=`
                      found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/nested.rs:19:66
   |
LL | const BAD_NESTING3: pattern_type!(pattern_type!(i32 is 1..) is ..0) = todo!();
   |                                                                  ^ expected `(i32) is 1..=`, found integer
   |
   = note: expected pattern type `(i32) is 1..=`
                      found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/nested.rs:23:43
   |
LL | const BAD_NESTING4: pattern_type!(() is ..0) = todo!();
   |                                           ^ expected `()`, found integer

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0308`.
